unpackaged/main/default/objects/InsurancePolicyTransaction/fields/Book_Status__c.field-meta.xml
<CustomField>
    <fullName>Book_Status__c</fullName>
    <description>This will track the status of the Instalment Book in CDL

Current And Credited - current live book
Paid Up And Credited - historic book
Cancelled - the book was cancelled (there can be few reasons why that would happen - check with Ops team if more detail required)</description>
    <label>Book Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current And Credited</fullName>
            </value>
            <value>
                <fullName>Paid Up And Credited</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>