unpackaged/main/default/objects/InsurancePolicyTransaction/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Id for transaction record in CDL - so Kingfisher integration knows which records to upsert against.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>