unpackaged/main/default/objects/InsurancePolicyTransaction/fields/Transaction_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Updated_Date__c</fullName>
    <description>Date when the Status was updated to paid/unpaid by the integration</description>
    <label>Transaction Updated Date</label>
    <type>DateTime</type>
</CustomField>