unpackaged/main/default/objects/InsurancePolicyTransaction/fields/Unpaid_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_Reason__c</fullName>
    <description>Reason this transaction did not go through</description>
    <inlineHelpText>Reason this transaction did not go through</inlineHelpText>
    <label>Unpaid Reason</label>
    <length>200</length>
    <type>Text</type>
</CustomField>